# stumpless

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CMakeLists.txt  ChangeLog.md  Gemfile  Help  INSTALL  INSTALL.md  Makefile  Makefile.am  QUIZ(CYBERNIKUNJ)  README.md  Viper  _config.yml  appveyor.yml  appveyor.yml.bak  codecov.yml  configure  configure.ac  deco  headers_check.pl  index.md  kaust  output  roadmap.md  script_doxygen_build.sh  script_markdown_replace.sh  sonar-project.properties  stumpless-test.c  stumpless.c  stumpless.def  stumpless.h  stumplessd.c  tester  threading-todo.md  todo  vision.md
include/: Makefile.am  README.md  binary_formatter.h  boolean.h  build.h.in  compression.h  configuration.h  counter.h  csv_formatter.h  custom_profile.h  decompression.h  dictionary.h  entry.h  event.h  file_output.h  filter.h  filter_list.h  format_methods.h  formatted_output.h  handler.h  handler_list.h  json_formatter.h  level.h  levels.h  logger.h  logger_profile.h  mysql_output.h  output.h  output_methods.h  output_profile.h  printer.h  public_name.h  raw_logger.h  sort.h  status.h  status_checker.h  stream_handler.h  stream_output.h  string_helper.h  stumpless.h  (+10 more)
include/private/: Makefile.am  adapter.h  adapter_base.h  adapter_initializer.h  adapter_list.h  boolean.h  cache.h  comparator.h  comparator_base.h  comparator_list.h  compare_base.h  config.h.in  configuration.h  csv_formatter.h  deprecate.h  dictionary.h  dictionary_static.h  dimension_list.h  dimension_list_static.h  element.h  entry.h  entry_attribute.h  entry_attribute_list.h  error.c  error.h  event.h  event_attribute.h  event_attribute_list.h  event_attribute_list_static.h  facility.h  filter.h  filter_base.h  filter_initializer.h  filter_list.h  filter_list_static.h  formatted_output.h  formatter.h  formatter_initializer.h  formatter_list.h  generic_sort.h  (+51 more)
include/static/: Makefile.am  dictionary.h  stack.h  text_formatter.h  tree.h
include/stumpless/: Makefile.am  adapter.h  adapter_list.h  boolean.h  config.h  config.h.in  configuration.h  csv_formatter.h  dictionary.h  element.h  entry.h  entry_attribute_list.h  error.h  event.h  exception.h  facility.h  filter.h  filter_list.h  formatter.h  formatter_list.h  generator.h  handler.h  handler_list.h  id.h  level.h  log.h  logger.h  memory.h  option.h  output.h  output_profile.h  param.h  priority.h  prival.h  public_name.h  record.h  record_attribute.h  severity.h  status.h  stream_handler.h  (+8 more)
include/test/: Makefile.am  config.hpp.in  function.h  helper.h  type.h
src/: Makefile.am  adapter.c  adapter_base.c  adapter_initializer.c  adapter_list.c  binary_formatter.c  boolean.c  cache.c  comparator.c  comparator_base.c  comparator_initializer.c  comparator_list.c  compare_base.c  configuration.c  csv_formatter.c  custom_profile.c  decompression.c  dictionary.c  dimension_list.c  element.c  entry.c  entry_attribute.c  entry_attribute_list.c  error.c  event.c  event_attribute.c  event_attribute_list.c  exception.c  facility.c  file_output.c  filter.c  filter_base.c  filter_initializer.c  filter_list.c  formatted_output.c  formatter.c  formatter_initializer.c  formatter_list.c  generic_sort.c  handler.c  (+50 more)
src/adapter/: Makefile.am  base.c  initializer.c
src/comparator/: Makefile.am  base.c  initializer.c
src/config/: abstract_socket_names_supported.c  abstract_socket_names_unsupported.c  chain_unsupported.c  fallback.c  gethostbyname_supported.c  have_fopen_s.c  have_getaddrinfo.c  have_gethostbyname.c  have_gethostbyname2.c  have_gmtime.c  have_gmtime_r.c  have_gmtime_s.c  have_pthread.c  have_stdatomic.c  have_strncpy_s.c  have_sys_socket.c  have_unistd.c  have_unistd_gethostname.c  have_unistd_getpagesize.c  have_vsnprintf_s.c  have_wchar.c  have_windows.c  have_winsock2.c  journald_supported.c  network_unsupported.c  no_getaddrinfo.c  no_gmtime.c  no_thread_safety.c  no_vsnprintf_s.c  no_wcsrtombs_s.c  socket_supported.c  sqlite3_unsupported.c  support_unistd_sysconf_getpagesize.c  support_windows_get_now.c  thread_safety_supported.c  thread_safety_unsupported.c  unistd_sysconf_getpagesize_supported.c  wel_supported.c  windows_get_now_supported.c
src/container/: Makefile.am  dictionary.c  list.c  queue.c  stack.c  tree.c
src/daemon/: stumplessd.c
src/exception/: Makefile.am  handler.c
src/filter/: Makefile.am  base.c  initializer.c
src/formatter/: Makefile.am  csv.c  initializer.c  text.c
src/handler/: Makefile.am  initializer.c  stream.c
src/level/: Makefile.am  initializer.c
src/list/: Makefile.am  adapter.c  adapter_list.c  comparator.c  comparator_list.c  const_iterator.c  const_reverse_iterator.c  entry_attribute.c  entry_attribute_list.c  event_attribute.c  filter.c  formatter.c  formatter_list.c  handler.c  iterator.c  list.c  reverse_iterator.c  value.c  value_list.c
src/logger/: Makefile.am  getter.c  log.c  sender.c
src/output/: Makefile.am  profile.c  profile_initializer.c
src/private/: Makefile.am
src/status/: Makefile.am  initializer.c
src/stumpless/: Makefile.am  wrapper_generator.c
src/swig/: stumpless.i
src/value/: Makefile.am  constructor.c  profile.c  profile_initializer.c
src/windows/: default_events.mc  stumpless.def
src/wrapper/: Makefile.am  adapter.c  adapter_list.c  boolean.c  comparator_list.c  configuration.c  dictionary.c  entry.c  entry_attribute_list.c  event.c  event_attribute_list.c  filter.c  filter_list.c  formatted_output.c  formatter.c  formatter_list.c  handler.c  handler_list.c  level.c  logger.c  logger_profile.c  output.c  output_profile.c  raw_logger.c  status.c  stream_handler.c  stream_output.c  text_formatter.c  value.c  value_constructor.c  value_list.c  value_profile.c
src/wrapture/: element.yml  entry.yml  error.yml  file_target.yml  param.yml  stumpless.yml  version.yml
test/: Makefile  Makefile.am  README.md  helper.def  stumpless-test.c
test/function/: Makefile.am  README.md  adapter.c  adapter_list.c  adapter_suite.c  boolean.c  boolean_suite.c  comparator.c  comparator_base.c  comparator_list.c  comparator_suite.c  compare_base.c  (+81 more)
(+3502 files in other folders)
